# laim-mono-dev

./: README.md
.ssh/: id_rsa.pub  id_rsa.pub.pub  ida_rsa
transcribe/: .gitignore  agentic_ai_webapp_prd (1).md  (+4 more)
transcribe/regulation_checker/: README.md  pyproject.toml
transcribe/regulation_checker/db/: chroma.sqlite3
transcribe/regulation_checker/knowledge/: data.json
transcribe/regulation_checker/mlruns/0/: meta.yaml
transcribe/regulation_checker/mlruns/554983512650712421/: meta.yaml
transcribe/regulation_checker/mlruns/554983512650712421/traces/1159780c1a874bb88b28213746fb3d6d/: trace_info.yaml
transcribe/regulation_checker/mlruns/554983512650712421/traces/1cfab96a1b5746ed9d458b959e70d7d9/: trace_info.yaml
transcribe/regulation_checker/mlruns/554983512650712421/traces/4481c718e55d4ce6bfa1d9943201222f/: trace_info.yaml
transcribe/regulation_checker/mlruns/554983512650712421/traces/4acc274f53904d4dba34addd70cb93e7/: trace_info.yaml
transcribe/regulation_checker/mlruns/554983512650712421/traces/6384ec7efdcf4375a4bc993e4c783365/: trace_info.yaml
transcribe/regulation_checker/mlruns/554983512650712421/traces/64d93f9f522a45d892eaaaee152663e1/: trace_info.yaml
transcribe/regulation_checker/mlruns/554983512650712421/traces/68bd87a743244acfbf16e72a6ef9ba15/: trace_info.yaml
transcribe/regulation_checker/mlruns/554983512650712421/traces/8585864b3c6b44918dc81d437a791075/: trace_info.yaml
transcribe/regulation_checker/src/regulation_checker/: crew.py  main.py
transcribe/regulation_checker/src/regulation_checker/config/: agents.yaml  tasks.yaml
(+92 files in other folders)
